--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,15 @@
         Program Studi Informatika di Universitas Jenderal Soedirman (Unsoed) berdiri pada tahun 2008, berawal dari kebutuhan yang semakin mendesak akan tenaga ahli di bidang teknologi informasi dan komunikasi. Saat itu, perkembangan teknologi yang pesat di Indonesia dan dunia memerlukan adanya program pendidikan tinggi yang mampu mencetak lulusan dengan kompetensi tinggi di bidang informatika. \nPada tahun tersebut, Fakultas Sains dan Teknik (FST) Unsoed mengambil inisiatif untuk mendirikan Program Studi Informatika. Pembentukan program studi ini bertujuan untuk memenuhi tuntutan masyarakat dan industri yang membutuhkan tenaga profesional dalam bidang teknologi informasi. Kurikulum yang disusun dirancang untuk memberikan pendidikan berkualitas, menggabungkan aspek praktis dan teoritis dari informatika, seperti pemrograman, sistem informasi, jaringan komputer, dan kecerdasan buatan.
     </string>
     <string name="next">Selanjutnya</string>
+    <string name="alamat">Raya Mayjen Sungkono km 5, Dusun 2, Blater, Kec. Kalimanah, Kabupaten Purbalingga, Jawa Tengah 53371</string>
+    <string name="lokasi">https://maps.app.goo.gl/SX6c8emV88dvuWxV9</string>
+    <string name="telepon">(0281) 6596700</string>
+    <string name="email">teknik@unsoed.ac.id</string>
+    <string name="himpunan">Himpunan Mahasiswa Informatika (HMIF UNSOED)</string>
+    <string name="ig_himpunan">https://www.instagram.com/hmifunsoed</string>
+    <string name="profil_lulusan">Profil Lulusan</string>
+    <string name="desc_lulusan">
+        Lulusan Program Studi Informatika Unsoed sebagian besar bekerja sebagai tenaga ahli di bidang perekayasaan perangkat lunak (Programer, Analis Sistem, Manajer Proyek, Database Administrator), Wirausahawan Informatika dan Dosen/Peneliti.
+    </string>
+    <string name="back">Kembali</string>
 </resources>
