--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,6 +13,7 @@
     <string name="email">teknik@unsoed.ac.id</string>
     <string name="himpunan">Himpunan Mahasiswa Informatika (HMIF UNSOED)</string>
     <string name="ig_himpunan">https://www.instagram.com/hmifunsoed</string>
+    <string name="koleksi_buku">Koleksi Buku</string>
     <string name="profil_lulusan">Profil Lulusan</string>
     <string name="desc_lulusan">
         Lulusan Program Studi Informatika Unsoed sebagian besar bekerja sebagai tenaga ahli di bidang perekayasaan perangkat lunak (Programer, Analis Sistem, Manajer Proyek, Database Administrator), Wirausahawan Informatika dan Dosen/Peneliti.
